testing/ingress/ingress-test.yaml
#
# Example Application Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: containous/whoami
---
#
# Service
#
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: whoami

---
#
# Insecure Ingress
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress-insecure
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik-internal
  rules:
    - host: whoami.spenceops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: whoami
                port:
                  number: 80
---
#
# Secure Ingress
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress-secure
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik-internal
  rules:
    - host: whoami-secure.spenceops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: whoami
                port:
                  number: 80
  tls:
   - hosts:
      - whoami-secure.spenceops.com
